<resources>
    <string name="app_name">AnimalRescueApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="species_input">Input Species</string>
    <string name="unknown_species">Unkown Species</string>
    <string name="injured">Injured</string>
    <string name="safe">Safe</string>
    <string name="submit">Submit</string>
    <string name="addMore">Tell Us More</string>
    <string name="email_or_username">Email or Phone Number</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create new Account?</string>
    <string name="or">OR</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register_using_facebook_account">Register using facebook account</string>
    <string name="register_using_google_account">Register using Google account</string>
</resources>